# 0.00.18 (56228) Sep 6, 2011
9/6/11 fix sign on partial charges
8/24/11 remove bad code from MPCanvas.updateLayout that was interfering with CenteredStage transform strategy
8/24/11 add stage bounds node, for layout debugging
8/24/11 convert rotate cursor to 32x32 gif, to work around Windows/Java bug #4842475
8/23/11 restore rotate cursor
# 0.00.17 (55737) Aug 23, 2011
8/23/11 temporarily disable rotate cursor
8/23/11 change canvas transform strategy from RenderingSizeStrategy to CenteredStage
8/23/11 fix unusual case where pressing Reset All results in "UnsupportedOperationException: Cannot normalize a zero-magnitude vector"
8/23/11 remove duplicate "do script" functionality from JmolViewerNode
8/23/11 add code (currently disabled) for "centered stage" transform strategy
8/23/11 pad rotate cursor with whitespace, so that it's 32x32, required by Windows
8/23/11 add major and minor tick marks to EN sliders
8/22/11 fix test program for EN sliders, change snap interval to 0.2
8/22/11 change bond color to dark gray, so that partial charges are still visible when they overlap bonds
8/22/11 position partial charge opposite molecular dipole for atom B in triatomic molecule
8/22/11 add view of partial charge for atom B in triatomic molecule (location is incorrect)
8/22/11 move computation of partial charges from bond to molecule, to handle atoms that participate in multiple bonds, lie atom B in triatomic molecule
8/22/11 prepare 2D isosurface by adding constructor args that will be needed for coloring
8/22/11 remove nodes related to surfaces from "Three Atoms" canvas
8/22/11 reverse order of colors in gradient specifications, to match Jmol naming conventions (negative-to-positive)
8/22/11 move gradient color specifications to MPColors, for reuse in 2D surfaces
# 0.00.16 (55638) Aug 22, 2011
8/22/11 dev version for discussion with KL
8/22/11 try another design for the Bond Type pointer, looks like a little bond [55631]